@@ -1,4 +1,9 @@
 
+2009-11-07  Chris Brannon <cmbrannon79@gmail.com>
+
+	* Fixed optdepends, converted to arch=('any').
+
+
 2008-07-06  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Updated for x86_64 - 8.2.7
